SF-Perkin/force-app/main/default/objects/User/fields/AgentId__c.field-meta.xml
<CustomField>
    <fullName>AgentId__c</fullName>
    <formula>Alias + &#39;@&#39; + Id + &#39;@&#39; + $Organization.Id</formula>
    <label>AgentId</label>
    <type>Text</type>
</CustomField>