SF-Perkin/force-app/main/default/objects/User/fields/Amazon_Direct_Dial_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Amazon_Direct_Dial_Phone_Number__c</fullName>
    <label>Amazon Direct Dial Phone Number</label>
    <type>Phone</type>
</CustomField>