SF-Perkin/force-app/main/default/objects/User/fields/Voice_Message_Language__c.field-meta.xml
<CustomField>
    <fullName>Voice_Message_Language__c</fullName>
    <label>Language of Voice Message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>