SF-Perkin/force-app/main/default/objects/User/fields/Voicemail_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Voicemail_Prompt__c</fullName>
    <label>Voicemail Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>