SF-Perkin/force-app/main/default/objects/User/listViews/USERS_Active.listView-meta.xml
<ListView>
    <fullName>USERS_Active</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>MANAGER</columns>
    <columns>PKI_GBLReason_for_Not_deactivated__c</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>License_type__c</field>
        <operation>equals</operation>
        <value>Salesforce</value>
    </filters>
    <filters>
        <field>ProfileName__c</field>
        <operation>equals</operation>
        <value>PROFILE: PKI Sales</value>
    </filters>
    <label>USERS: Active</label>
    <language>en_US</language>
</ListView>