SF-Perkin/force-app/main/default/objects/User/listViews/USERS_Do_Not_Deactivate.listView-meta.xml
<ListView>
    <fullName>USERS_Do_Not_Deactivate</fullName>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>FULL_NAME</columns>
    <columns>Business__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>Cost_Center__c</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>Direct_Manager__c</columns>
    <columns>Do_Not_Deactivate__c</columns>
    <columns>PKI_GBLReason_for_Not_deactivated__c</columns>
    <columns>Deactivation_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Do_Not_Deactivate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>USERS: Do Not Deactivate</label>
    <language>en_US</language>
</ListView>